--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+.link {
+  fill: none;
+  stroke: #000;
+  stroke-opacity: 0.2;
+}
+.link:hover {
+  stroke-opacity: 0.5;
+}
