--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,7 @@
 .link:hover {
   stroke-opacity: 0.5;
 }
+.react-tabs__tab--selected {
+  background: #f5f5f5;
+  box-shadow: #e4e4e4 -2px -2px;
+}
